# europe-odds-analyze

./: .env  Cargo.toml  License  README.md  deny.toml  odds.yml
.github/workflows/: _build.yml
data/: Cargo.toml
data/src/: config.rs  lib.rs
data/src/beans/: match_info.rs  mod.rs
data/src/db_types/: bookmaker.rs  league.rs  matches.rs  mod.rs  odds.rs  team.rs
data/src/error/: mod.rs
data/src/types/: bookmaker.rs  odds.rs
datas/: Cargo.toml
datas/src/error/: mod.rs
datas/src/types/: league.rs  matches.rs  team.rs
migrations/: 20221212014505_init.down.sql  20221212014505_init.up.sql  20221212015047_odds.down.sql  20221212015047_odds.up.sql  20221212022234_function.down.sql  20221212022234_function.up.sql  20230103111801_alter.down.sql  20230103111801_alter.up.sql
odds/: Cargo.toml
odds-logger/: package.json  tsconfig.json  vite.config.ts
odds-logger/src/: App.css  App.tsx  main.tsx
odds-logger/src/components/: app_layout.tsx  match_info.tsx  odds.tsx  test.tsx
odds-logger/src/pages/: bookmaker.tsx  bookmaker_update.tsx  league.tsx  league_update.tsx  match.tsx  match_list.tsx  match_query.tsx  match_update.tsx  odds.tsx  team.tsx  team_update.tsx
odds-logger/src/routes/: index.tsx
odds-logger/src/types/: data.d.ts
odds-logger/src/utils/: index.ts
odds-logger/tarui-src/: Cargo.toml  tauri.conf.json
odds-logger/tarui-src/icons/: icon.icns
odds-logger/tarui-src/src/: lib.rs  main.rs  tauri_bookmaker.rs  tauri_league.rs  tauri_odds.rs  tauri_team.rs
odds/src/: lib.rs  manager.rs  test_util.rs
presentation/: Cargo.toml
presentation/src/: lib.rs  main.rs  utils.rs
presentation/src/components/: bookmakers.rs  leagues.rs  mod.rs  wrap_app.rs
rfcs/: 001-core-features.md
