[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
derive_builder = "0.12.0"
thiserror = "1.0.37"
chrono = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
