[package]
name = "odds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
datas = { version = "0.1.0", path = "../datas" }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.23.0", features = ["full"] }
sqlx_mock = "0.1.1"

[dev-dependencies]

