[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20"
eframe = { version = "0.20", default-features = false,  features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
tracing-subscriber = "0.3"
tokio = { version = "1.14", features = ["full"] }
data = { version = "0.1.0", path = "../data" }
odds = { version = "0.1.0", path = "../odds" }
